--- a/charts/falco/Chart.yaml
+++ b/charts/falco/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: falco
 version: 4.4.0
-appVersion: "0.38-rc3"
+appVersion: "0.38.0"
 description: Falco
 keywords:
   - monitoring
