Added the controller.labels field for extra deploment/daemonset labeling.
Signed-off-by: Strigix <stefan@vtveld.nl>

--- a/charts/falco/values.yaml
+++ b/charts/falco/values.yaml
@@ -139,6 +139,8 @@ controller:
   kind: daemonset
   # Annotations to add to the daemonset or deployment
   annotations: {}
+  # -- Extra labels to add to the daemonset or deployment
+  labels: {}
   daemonset:
     updateStrategy:
       # You can also customize maxUnavailable or minReadySeconds if you
