Use webui.service.port for WEBUI_URL secret value
Signed-off-by: Paul Rey <contact@paulrey.io>

--- a/charts/falcosidekick/templates/secrets.yaml
+++ b/charts/falcosidekick/templates/secrets.yaml
@@ -445,7 +445,7 @@ data:
 
   # WebUI Output
   {{- if .Values.webui.enabled -}}
-  {{ $weburl := printf "http://%s-ui:2802" (include "falcosidekick.fullname" .) }}
+  {{ $weburl := printf "http://%s-ui:%s" (include "falcosidekick.fullname" .) .Values.webui.service.port }}
   WEBUI_URL: "{{ $weburl | b64enc }}"
   {{- end }}
 {{- end }}
