--- a/charts/falcosidekick/templates/secrets.yaml
+++ b/charts/falcosidekick/templates/secrets.yaml
@@ -445,7 +445,7 @@ data:
 
   # WebUI Output
   {{- if .Values.webui.enabled -}}
-  {{ $weburl := printf "http://%s-ui:%s" (include "falcosidekick.fullname" .) .Values.webui.service.port }}
+  {{ $weburl := printf "http://%s-ui:%d" (include "falcosidekick.fullname" .) (.Values.webui.service.port | int) }}
   WEBUI_URL: "{{ $weburl | b64enc }}"
   {{- end }}
 {{- end }}
