--- a/charts/falcosidekick/templates/secrets-ui.yaml
+++ b/charts/falcosidekick/templates/secrets-ui.yaml
@@ -1,5 +1,4 @@
 {{- if .Values.webui.enabled -}}
-{{- if eq .Values.webui.existingSecret "" }}
 ---
 apiVersion: v1
 kind: Secret
@@ -9,6 +8,13 @@ metadata:
   labels:
     {{- include "falcosidekick.labels" . | nindent 4 }}
     app.kubernetes.io/component: ui
+    {{- with .Values.webui.customLabels }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
+  annotations:
+    {{- with .Values.webui.customAnnotations }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
 type: Opaque
 data:
   {{- if .Values.webui.user }}
@@ -28,10 +34,16 @@ metadata:
   labels:
     {{- include "falcosidekick.labels" . | nindent 4 }}
     app.kubernetes.io/component: ui
+    {{- with .Values.webui.customLabels }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
+  annotations:
+    {{- with .Values.webui.customAnnotations }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
 type: Opaque
 data:
   {{- if .Values.webui.redis.password }}
   REDIS_ARGS: "{{ printf "--requirepass %s" .Values.webui.redis.password | b64enc}}"
   {{-  end }}
-{{- end }}
 {{- end }}
