--- a/charts/falcosidekick/templates/secrets.yaml
+++ b/charts/falcosidekick/templates/secrets.yaml
@@ -1,4 +1,3 @@
-{{- if eq .Values.config.existingSecret "" }}
 {{- $fullName := include "falcosidekick.fullname" . -}}
 ---
 apiVersion: v1
@@ -9,6 +8,13 @@ metadata:
   labels:
     {{- include "falcosidekick.labels" . | nindent 4 }}
     app.kubernetes.io/component: core
+    {{- with .Values.customLabels }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
+  annotations:
+    {{- with .Values.customAnnotations }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
 type: Opaque
 data:
   # Slack Output
@@ -109,6 +115,8 @@ data:
   AWS_SQS_MINIMUMPRIORITY: "{{ .Values.config.aws.sqs.minimumpriority | b64enc }}"
   AWS_S3_BUCKET: "{{ .Values.config.aws.s3.bucket | b64enc }}"
   AWS_S3_PREFIX: "{{ .Values.config.aws.s3.prefix | b64enc }}"
+  AWS_S3_ENDPOINT: "{{ .Values.config.aws.s3.endpoint | b64enc }}"
+  AWS_S3_OBJECTCANNEDACL: "{{ .Values.config.aws.s3.objectcannedacl | b64enc }}"
   AWS_S3_MINIMUMPRIORITY: "{{ .Values.config.aws.s3.minimumpriority | b64enc }}"
   AWS_KINESIS_STREAMNAME: "{{ .Values.config.aws.kinesis.streamname | b64enc }}"
   AWS_KINESIS_MINIMUMPRIORITY: "{{ .Values.config.aws.kinesis.minimumpriority | b64enc }}"
@@ -177,6 +185,10 @@ data:
   ELASTICSEARCH_CHECKCERT: "{{ .Values.config.elasticsearch.checkcert | printf "%t" | b64enc }}"
   ELASTICSEARCH_USERNAME: "{{ .Values.config.elasticsearch.username | b64enc }}"
   ELASTICSEARCH_PASSWORD: "{{ .Values.config.elasticsearch.password | b64enc }}"
+  ELASTICSEARCH_FLATTENFIELDS: "{{ .Values.config.elasticsearch.flattenfields | printf "%t" | b64enc }}"
+  ELASTICSEARCH_CREATEINDEXTEMPLATE: "{{ .Values.config.elasticsearch.createindextemplate | printf "%t" | b64enc }}"
+  ELASTICSEARCH_NUMBEROFSHARDS: "{{ .Values.config.elasticsearch.numberofshards | toString | b64enc }}"
+  ELASTICSEARCH_NUMBEROFREPLICAS: "{{ .Values.config.elasticsearch.numberofreplicas | toString | b64enc }}"
   ELASTICSEARCH_CUSTOMHEADERS: "{{ .Values.config.elasticsearch.customheaders | b64enc }}"
 
   # Loki Output
@@ -330,16 +342,16 @@ data:
   # KafkaRest Output
   KAFKAREST_ADDRESS: "{{ .Values.config.kafkarest.address | b64enc}}"
   KAFKAREST_VERSION: "{{ .Values.config.kafkarest.version | toString | b64enc}}"
-  KAFKAREST_MINIMUMPRIORITY : "{{ .Values.config.kafkarest.minimumpriority | b64enc}}"
-  KAFKAREST_MUTUALTLS : "{{ .Values.config.kafkarest.mutualtls | printf "%t" | b64enc}}"
-  KAFKAREST_CHECKCERT : "{{ .Values.config.kafkarest.checkcert | printf "%t" | b64enc}}"
+  KAFKAREST_MINIMUMPRIORITY: "{{ .Values.config.kafkarest.minimumpriority | b64enc}}"
+  KAFKAREST_MUTUALTLS: "{{ .Values.config.kafkarest.mutualtls | printf "%t" | b64enc}}"
+  KAFKAREST_CHECKCERT: "{{ .Values.config.kafkarest.checkcert | printf "%t" | b64enc}}"
 
   # Syslog
   SYSLOG_HOST: "{{ .Values.config.syslog.host | b64enc}}"
   SYSLOG_PORT: "{{ .Values.config.syslog.port | toString | b64enc}}"
   SYSLOG_PROTOCOL: "{{ .Values.config.syslog.protocol | b64enc}}"
   SYSLOG_FORMAT: "{{ .Values.config.syslog.format | b64enc}}"
-  SYSLOG_MINIMUMPRIORITY : "{{ .Values.config.syslog.minimumpriority | b64enc}}"
+  SYSLOG_MINIMUMPRIORITY: "{{ .Values.config.syslog.minimumpriority | b64enc}}"
 
   # Zoho Cliq
   CLIQ_WEBHOOKURL: "{{ .Values.config.cliq.webhookurl | b64enc}}"
@@ -347,52 +359,52 @@ data:
   CLIQ_USEEMOJI: "{{ .Values.config.cliq.useemoji | printf "%t" | b64enc}}"
   CLIQ_OUTPUTFORMAT: "{{ .Values.config.cliq.outputformat | b64enc}}"
   CLIQ_MESSAGEFORMAT: "{{ .Values.config.cliq.messageformat | b64enc}}"
-  CLIQ_MINIMUMPRIORITY : "{{ .Values.config.cliq.minimumpriority | b64enc}}"
+  CLIQ_MINIMUMPRIORITY: "{{ .Values.config.cliq.minimumpriority | b64enc}}"
 
   # Policy Reporter
   POLICYREPORT_ENABLED: "{{ .Values.config.policyreport.enabled | printf "%t"| b64enc}}"
   POLICYREPORT_KUBECONFIG: "{{ .Values.config.policyreport.kubeconfig | b64enc}}"
   POLICYREPORT_MAXEVENTS: "{{ .Values.config.policyreport.maxevents | toString | b64enc}}"
   POLICYREPORT_PRUNEBYPRIORITY: "{{ .Values.config.policyreport.prunebypriority | printf "%t" | b64enc}}"
-  POLICYREPORT_MINIMUMPRIORITY : "{{ .Values.config.policyreport.minimumpriority | b64enc}}"
+  POLICYREPORT_MINIMUMPRIORITY: "{{ .Values.config.policyreport.minimumpriority | b64enc}}"
 
   # Node Red
   NODERED_ADDRESS: "{{ .Values.config.nodered.address | b64enc}}"
   NODERED_USER: "{{ .Values.config.nodered.user | b64enc}}"
   NODERED_PASSWORD: "{{ .Values.config.nodered.password | b64enc}}"
   NODERED_CUSTOMHEADERS: "{{ .Values.config.nodered.customheaders | b64enc}}"
-  NODERED_CHECKCERT : "{{ .Values.config.nodered.checkcert | printf "%t" | b64enc}}"
-  NODERED_MINIMUMPRIORITY : "{{ .Values.config.nodered.minimumpriority | b64enc}}"
+  NODERED_CHECKCERT: "{{ .Values.config.nodered.checkcert | printf "%t" | b64enc}}"
+  NODERED_MINIMUMPRIORITY: "{{ .Values.config.nodered.minimumpriority | b64enc}}"
 
   # MQTT
   MQTT_BROKER: "{{ .Values.config.mqtt.broker | b64enc}}"
   MQTT_TOPIC: "{{ .Values.config.mqtt.topic | b64enc}}"
   MQTT_QOS: "{{ .Values.config.mqtt.qos | toString | b64enc}}"
-  MQTT_RETAINED : "{{ .Values.config.mqtt.retained | printf "%t" | b64enc}}"
+  MQTT_RETAINED: "{{ .Values.config.mqtt.retained | printf "%t" | b64enc}}"
   MQTT_USER: "{{ .Values.config.mqtt.user | b64enc}}"
   MQTT_PASSWORD: "{{ .Values.config.mqtt.password | b64enc}}"
-  MQTT_CHECKCERT : "{{ .Values.config.mqtt.checkcert | printf "%t" | b64enc}}"
-  MQTT_MINIMUMPRIORITY : "{{ .Values.config.mqtt.minimumpriority | b64enc}}"
+  MQTT_CHECKCERT: "{{ .Values.config.mqtt.checkcert | printf "%t" | b64enc}}"
+  MQTT_MINIMUMPRIORITY: "{{ .Values.config.mqtt.minimumpriority | b64enc}}"
 
   # Zincsearch
   ZINCSEARCH_HOSTPORT: "{{ .Values.config.zincsearch.hostport | b64enc}}"
   ZINCSEARCH_INDEX: "{{ .Values.config.zincsearch.index | b64enc}}"
   ZINCSEARCH_USERNAME: "{{ .Values.config.zincsearch.username | b64enc}}"
   ZINCSEARCH_PASSWORD: "{{ .Values.config.zincsearch.password | b64enc}}"
-  ZINCSEARCH_CHECKCERT : "{{ .Values.config.zincsearch.checkcert | printf "%t" | b64enc}}"
-  ZINCSEARCH_MINIMUMPRIORITY : "{{ .Values.config.zincsearch.minimumpriority | b64enc}}"
+  ZINCSEARCH_CHECKCERT: "{{ .Values.config.zincsearch.checkcert | printf "%t" | b64enc}}"
+  ZINCSEARCH_MINIMUMPRIORITY: "{{ .Values.config.zincsearch.minimumpriority | b64enc}}"
 
   # Gotify
   GOTIFY_HOSTPORT: "{{ .Values.config.gotify.hostport | b64enc}}"
   GOTIFY_TOKEN: "{{ .Values.config.gotify.token | b64enc}}"
   GOTIFY_FORMAT: "{{ .Values.config.gotify.format | b64enc}}"
-  GOTIFY_CHECKCERT : "{{ .Values.config.gotify.checkcert | printf "%t" | b64enc}}"
-  GOTIFY_MINIMUMPRIORITY : "{{ .Values.config.gotify.minimumpriority | b64enc}}"
+  GOTIFY_CHECKCERT: "{{ .Values.config.gotify.checkcert | printf "%t" | b64enc}}"
+  GOTIFY_MINIMUMPRIORITY: "{{ .Values.config.gotify.minimumpriority | b64enc}}"
 
   # Tekton
   TEKTON_EVENTLISTENER: "{{ .Values.config.tekton.eventlistener | b64enc}}"
-  TEKTON_CHECKCERT : "{{ .Values.config.tekton.checkcert | printf "%t" | b64enc}}"
-  TEKTON_MINIMUMPRIORITY : "{{ .Values.config.tekton.minimumpriority | b64enc}}"
+  TEKTON_CHECKCERT: "{{ .Values.config.tekton.checkcert | printf "%t" | b64enc}}"
+  TEKTON_MINIMUMPRIORITY: "{{ .Values.config.tekton.minimumpriority | b64enc}}"
 
   # Spyderbat
   SPYDERBAT_ORGUID: "{{ .Values.config.spyderbat.orguid | b64enc}}"
@@ -400,7 +412,7 @@ data:
   SPYDERBAT_APIURL: "{{ .Values.config.spyderbat.apiurl | b64enc}}"
   SPYDERBAT_SOURCE: "{{ .Values.config.spyderbat.source | b64enc}}"
   SPYDERBAT_SOURCEDESCRIPTION: "{{ .Values.config.spyderbat.sourcedescription | b64enc}}"
-  SPYDERBAT_MINIMUMPRIORITY : "{{ .Values.config.spyderbat.minimumpriority | b64enc}}"
+  SPYDERBAT_MINIMUMPRIORITY: "{{ .Values.config.spyderbat.minimumpriority | b64enc}}"
 
   # TimescaleDB
   TIMESCALEDB_HOST: "{{ .Values.config.timescaledb.host | b64enc}}"
@@ -409,7 +421,7 @@ data:
   TIMESCALEDB_PASSWORD: "{{ .Values.config.timescaledb.password | b64enc}}"
   TIMESCALEDB_DATABASE: "{{ .Values.config.timescaledb.database | b64enc}}"
   TIMESCALEDB_HYPERTABLENAME: "{{ .Values.config.timescaledb.hypertablename | b64enc}}"
-  TIMESCALEDB_MINIMUMPRIORITY : "{{ .Values.config.timescaledb.minimumpriority | b64enc}}"
+  TIMESCALEDB_MINIMUMPRIORITY: "{{ .Values.config.timescaledb.minimumpriority | b64enc}}"
 
   # Redis Output
   REDIS_ADDRESS: "{{ .Values.config.redis.address | b64enc}}"
@@ -417,35 +429,74 @@ data:
   REDIS_DATABASE: "{{ .Values.config.redis.database | toString | b64enc}}"
   REDIS_KEY: "{{ .Values.config.redis.key | b64enc}}"
   REDIS_STORAGETYPE: "{{ .Values.config.redis.storagetype | b64enc}}"
-  REDIS_MINIMUMPRIORITY : "{{ .Values.config.redis.minimumpriority | b64enc}}"
+  REDIS_MINIMUMPRIORITY: "{{ .Values.config.redis.minimumpriority | b64enc}}"
 
   # TELEGRAM Output
   TELEGRAM_TOKEN: "{{ .Values.config.telegram.token | b64enc}}"
   TELEGRAM_CHATID: "{{ .Values.config.telegram.chatid | b64enc}}"
-  TELEGRAM_MINIMUMPRIORITY : "{{ .Values.config.telegram.minimumpriority | b64enc}}"
-  TELEGRAM_CHECKCERT : "{{ .Values.config.telegram.checkcert | printf "%t" | b64enc}}"
+  TELEGRAM_MINIMUMPRIORITY: "{{ .Values.config.telegram.minimumpriority | b64enc}}"
+  TELEGRAM_CHECKCERT: "{{ .Values.config.telegram.checkcert | printf "%t" | b64enc}}"
 
   # N8N Output
   N8N_ADDRESS: "{{ .Values.config.n8n.address | b64enc}}"
   N8N_USER: "{{ .Values.config.n8n.user | b64enc}}"
   N8N_PASSWORD: "{{ .Values.config.n8n.password | b64enc}}"
-  N8N_MINIMUMPRIORITY : "{{ .Values.config.n8n.minimumpriority | b64enc}}"
-  N8N_CHECKCERT : "{{ .Values.config.n8n.checkcert | printf "%t" | b64enc}}"
+  N8N_MINIMUMPRIORITY: "{{ .Values.config.n8n.minimumpriority | b64enc}}"
+  N8N_CHECKCERT: "{{ .Values.config.n8n.checkcert | printf "%t" | b64enc}}"
 
   # Open Observe Output
   OPENOBSERVE_HOSTPORT: "{{ .Values.config.openobserve.hostport | b64enc}}"
   OPENOBSERVE_USERNAME: "{{ .Values.config.openobserve.username | b64enc}}"
   OPENOBSERVE_PASSWORD: "{{ .Values.config.openobserve.password | b64enc}}"
-  OPENOBSERVE_CHECKCERT : "{{ .Values.config.openobserve.checkcert | printf "%t" | b64enc}}"
-  OPENOBSERVE_MUTUALTLS : "{{ .Values.config.openobserve.mutualtls | printf "%t" | b64enc}}"
-  OPENOBSERVE_CUSTOMHEADERS : "{{ .Values.config.openobserve.customheaders | b64enc}}"
+  OPENOBSERVE_CHECKCERT: "{{ .Values.config.openobserve.checkcert | printf "%t" | b64enc}}"
+  OPENOBSERVE_MUTUALTLS: "{{ .Values.config.openobserve.mutualtls | printf "%t" | b64enc}}"
+  OPENOBSERVE_CUSTOMHEADERS: "{{ .Values.config.openobserve.customheaders | b64enc}}"
   OPENOBSERVE_ORGANIZATIONNAME: "{{ .Values.config.openobserve.organizationname | b64enc}}"
   OPENOBSERVE_STREAMNAME: "{{ .Values.config.openobserve.streamname | b64enc}}"
-  OPENOBSERVE_MINIMUMPRIORITY : "{{ .Values.config.openobserve.minimumpriority | b64enc}}"
+  OPENOBSERVE_MINIMUMPRIORITY: "{{ .Values.config.openobserve.minimumpriority | b64enc}}"
 
+  # Dynatrace
+  DYNATRACE_APITOKEN: "{{ .Values.config.dynatrace.apitoken | b64enc}}"
+  DYNATRACE_APIURL: "{{ .Values.config.dynatrace.apiurl | b64enc}}"
+  DYNATRACE_CHECKCERT: "{{ .Values.config.dynatrace.checkcert | printf "%t" | b64enc}}"
+  DYNATRACE_MINIMUMPRIORITY: "{{ .Values.config.dynatrace.minimumpriority | b64enc}}"
+
+  # OTLP Traces
+  OTLP_TRACES_ENDPOINT: "{{ .Values.config.otlp.traces.endpoint | b64enc}}"
+  OTLP_TRACES_PROTOCOL: "{{ .Values.config.otlp.traces.endpoint | b64enc}}"
+  OTLP_TRACES_TIMEOUT: "{{ .Values.config.otlp.traces.timeout | toString | b64enc}}"
+  OTLP_TRACES_HEADERS: "{{ .Values.config.otlp.traces.headers | b64enc}}"
+  OTLP_TRACES_SYNCED: "{{ .Values.config.otlp.traces.synced | printf "%t" | b64enc}}"
+  OTLP_TRACES_DURATION: "{{ .Values.config.otlp.traces.duration | toString | b64enc}}"
+  OTLP_TRACES_CHECKCERT: "{{ .Values.config.otlp.traces.checkcert | printf "%t" | b64enc}}"
+  OTLP_TRACES_MINIMUMPRIORITY: "{{ .Values.config.otlp.traces.minimumpriority | b64enc}}"
+
+  # Sumologic
+  SUMOLOGIC_RECEIVERURL: "{{ .Values.config.sumologic.receiverURL | b64enc}}"
+  SUMOLOGIC_SOURCECATEGORY: "{{ .Values.config.sumologic.sourceCategory | b64enc}}"
+  SUMOLOGIC_SOURCEHOST: "{{ .Values.config.sumologic.sourceHost | b64enc}}"
+  SUMOLOGIC_NAME: "{{ .Values.config.sumologic.name | b64enc}}"
+  SUMOLOGIC_CHECKCERT: "{{ .Values.config.sumologic.checkcert | printf "%t" | b64enc}}"
+  SUMOLOGIC_MINIMUMPRIORITY: "{{ .Values.config.sumologic.minimumpriority | b64enc}}"
+
+  # Quickwit
+  QUICKWIT_HOSTPORT: "{{ .Values.config.quickwit.hostport | b64enc}}"
+  QUICKWIT_APIENDPOINT: "{{ .Values.config.quickwit.apiendpoint | b64enc}}"
+  QUICKWIT_INDEX: "{{ .Values.config.quickwit.index | b64enc}}"
+  QUICKWIT_AUTOCREATEINDEX: "{{ .Values.config.quickwit.autocreateindex | printf "%t" | b64enc}}"
+  QUICKWIT_CUSTOMHEADERS: "{{ .Values.config.quickwit.customHeaders | b64enc}}"
+  QUICKWIT_VERSION: "{{ .Values.config.quickwit.version | b64enc}}"
+  QUICKWIT_CHECKCERT: "{{ .Values.config.quickwit.checkcert | printf "%t" | b64enc}}"
+  QUICKWIT_MUTUALTLS: "{{ .Values.config.quickwit.mutualtls | printf "%t" | b64enc}}"
+  QUICKWIT_MINIMUMPRIORITY: "{{ .Values.config.quickwit.minimumpriority | b64enc}}"
+
+  # Talon
+  TALON_ADDRESS: "{{ .Values.config.talon.address | b64enc}}"
+  TALON_CHECKCERT: "{{ .Values.config.talon.checkcert | printf "%t" | b64enc}}"
+  TALON_MINIMUMPRIORITY: "{{ .Values.config.talon.minimumpriority | b64enc}}"
+  
   # WebUI Output
   {{- if .Values.webui.enabled -}}
   {{ $weburl := printf "http://%s-ui:%d" (include "falcosidekick.fullname" .) (.Values.webui.service.port | int) }}
   WEBUI_URL: "{{ $weburl | b64enc }}"
   {{- end }}
-{{- end }}
