--- a/charts/falcosidekick/templates/service-ui.yaml
+++ b/charts/falcosidekick/templates/service-ui.yaml
@@ -8,10 +8,16 @@ metadata:
   labels:
     {{- include "falcosidekick.labels" . | nindent 4 }}
     app.kubernetes.io/component: ui
-  {{- with .Values.webui.service.annotations }}
-  annotations:
+    {{- with .Values.webui.customLabels }}
     {{- toYaml . | nindent 4 }}
-  {{- end }}
+    {{- end }}
+  annotations:
+    {{- with .Values.webui.customAnnotations }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
+    {{- with .Values.webui.service.annotations }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
 spec:
   type: {{ .Values.webui.service.type }}
   ports:
