--- a/charts/falcosidekick/values.yaml
+++ b/charts/falcosidekick/values.yaml
@@ -14,7 +14,7 @@ image:
   # -- The image repository to pull from
   repository: falcosecurity/falcosidekick
   # -- The image tag to pull
-  tag: 2.28.0
+  tag: 2.29.0
   # -- The image pull policy
   pullPolicy: IfNotPresent
 
@@ -43,6 +43,12 @@ podSecurityPolicy:
 
 # -- Name of the priority class to be used by the Sidekickpods, priority class needs to be created beforehand
 priorityClassName: ""
+
+# -- custom labels to add to all resources
+customLabels: {}
+
+# -- custom annotations to add to all resources
+customAnnotations: {}
 
 # -- additions labels on the pods
 podLabels: {}
@@ -124,6 +130,8 @@ config:
   templatedfields: ""
   # -- if not empty, the brackets in keys of Output Fields are replaced
   bracketreplacer: ""
+  # if not empty, allow to change the format of the output field. (example: "<timestamp>: <priority> <output> <custom_fields> <templated_fields>") (default: "<timestamp>: <priority> <output>")
+  outputFieldFormat: ""
   # -- folder which will used to store client.crt, client.key and ca.crt files for mutual tls for outputs, will be deprecated in the future (default: "/etc/certs")
   mutualtlsfilespath: "/etc/certs"
 
@@ -134,6 +142,10 @@ config:
     keyfile: ""
     # -- CA certification file for server certification for mutual TLS authentication, takes priority over mutualtlsfilespath if not empty
     cacertfile: ""
+
+  tlsclient:
+    # -- CA certificate file for server certification on TLS connections, appended to the system CA pool if not empty
+    cacertfile: "/etc/certs/client/ca.crt"
 
   tlsserver:
     # -- if true TLS server will be deployed instead of HTTP
@@ -270,6 +282,14 @@ config:
     username: ""
     # -- use this password to authenticate to Elasticsearch if the password is not empty
     password: ""
+    # -- Replace . by _ to avoid mapping conflicts, force to true if createindextemplate==true (default: false)
+    flattenfields: false
+    # -- Create an index template (default: false)
+    createindextemplate: false
+    # -- Number of shards set by the index template (default: 3)
+    numberofshards: 3
+    # -- Number of replicas set by the index template (default: 3)
+    numberofreplicas: 3
     # -- a list of comma separated custom headers to add, syntax is "key:value,key:value"
     customheaders: ""
     # -- if true, checkcert flag will be ignored (server cert will always be checked)
@@ -395,6 +415,10 @@ config:
       bucket: ""
       # -- AWS S3, name of prefix, keys will have format: s3://<bucket>/<prefix>/YYYY-MM-DD/YYYY-MM-DDTHH:mm:ss.s+01:00.json
       prefix: ""
+      # -- Endpoint URL that overrides the default generated endpoint, use this for S3 compatible APIs
+      endpoint: ""
+      # -- Canned ACL (x-amz-acl) to use when creating the object
+      objectcannedacl: "bucket-owner-full-control"
       # -- minimum priority of event to use this output, order is `emergency\|alert\|critical\|error\|warning\|notice\|informational\|debug or ""`
       minimumpriority: ""
     kinesis:
@@ -931,6 +955,81 @@ config:
     # -- a list of comma separated custom headers to add, syntax is "key:value,key:value"
     customheaders: ""
 
+  dynatrace:
+    # -- Dynatrace API token with the "logs.ingest" scope, more info : https://dt-url.net/8543sda, if not empty, Dynatrace output is enabled
+    apitoken: ""
+    # -- Dynatrace API url, use https://ENVIRONMENTID.live.dynatrace.com/api for Dynatrace SaaS and https://YOURDOMAIN/e/ENVIRONMENTID/api for Dynatrace Managed, more info : https://dt-url.net/ej43qge
+    apiurl: ""
+    # -- check if ssl certificate of the output is valid
+    checkcert: true
+    # -- minimum priority of event for using this output, order is emergency|alert|critical|error|warning|notice|informational|debug or ""
+    minimumpriority: ""
+
+  otlp:
+    traces:
+      # -- OTLP endpoint in the form of http://{domain or ip}:4318/v1/traces, if not empty, OTLP Traces output is enabled
+      endpoint: ""
+      # -- OTLP protocol http/json, http/protobuf, grpc (default: "" which uses SDK default: http/json)
+      protocol: ""
+      # -- OTLP timeout: timeout value in milliseconds (default: "" which uses SDK default: 10000)
+      timeout: ""
+      # -- OTLP headers: list of headers to apply to all outgoing traces in the form of "some-key=some-value,other-key=other-value" (default: "")
+      headers: ""
+      # -- Set to true if you want traces to be sent synchronously (default: false)
+      synced: false
+      # -- Artificial span duration in milliseconds (default: 1000)
+      duration: 1000
+      # -- Extra env vars (override the other settings)
+      extraenvvars: {}
+        # OTEL_EXPORTER_OTLP_TRACES_TIMEOUT: 10000
+        # OTEL_EXPORTER_OTLP_TIMEOUT: 10000
+      # -- minimum priority of event for using this output, order is emergency|alert|critical|error|warning|notice|informational|debug or ""
+      minimumpriority: ""
+      # -- check if ssl certificate of the output is valid
+      checkcert: true
+
+  sumologic:
+    # -- Sumologic HTTP Source URL, if not empty, Sumologic output is enabled
+    receiverURL: ""
+    # -- Override the default Sumologic Source Category
+    sourceCategory: ""
+    # -- Override the default Sumologic Source Host
+    sourceHost: ""
+    # -- Override the default Sumologic Source Name
+    name: ""
+    # -- minimum priority of event for using this output, order is emergency|alert|critical|error|warning|notice|informational|debug or "" (default)
+    minimumpriority: ""
+    # -- check if ssl certificate of the output is valid (default: true)
+    checkcert: true
+
+  quickwit:
+    # -- http://{domain or ip}:{port}, if not empty, Quickwit output is enabled
+    hostport: ""
+    # -- API endpoint (containing the API version, overideable in case of quickwit behind a reverse proxy with URL rewriting)
+    apiendpoint: "/api/v1"
+    # -- Index
+    index: "falco"
+    # -- Version of quickwi
+    version: "0.7"
+    # -- Autocreate a falco index mapping if it doesn't exists
+    autocreateindex: false
+    # -- a list of comma separated custom headers to add, syntax is "key:value,key:value"
+    customHeaders: ""
+    # -- minimum priority of event to use this output, order is `emergency\|alert\|critical\|error\|warning\|notice\|informational\|debug or ""`
+    minimumpriority: ""
+    # -- if true, checkcert flag will be ignored (server cert will always be checked)
+    mutualtls: false
+    # --  check if ssl certificate of the output is valid
+    checkcert: true
+
+  talon:
+    # -- Talon address, if not empty, Talon output is enabled
+    address: ""
+    # -- minimum priority of event to use this output, order is `emergency\|alert\|critical\|error\|warning\|notice\|informational\|debug or ""`
+    minimumpriority: ""
+    # --  check if ssl certificate of the output is valid
+    checkcert: true
+
 service:
   # -- Service type
   type: ClusterIP
@@ -943,6 +1042,8 @@ service:
 ingress:
   # -- Whether to create the ingress
   enabled: false
+  # -- ingress class name
+  ingressClassName: ""
   # -- Ingress annotations
   annotations: {}
     # kubernetes.io/ingress.class: nginx
@@ -1068,6 +1169,8 @@ webui:
   ingress:
     # -- Whether to create the Web UI ingress
     enabled: false
+    # -- ingress class name
+    ingressClassName: ""
     # --  Web UI ingress annotations
     annotations: {}
       # kubernetes.io/ingress.class: nginx
@@ -1128,6 +1231,12 @@ webui:
 
     # -- Name of the priority class to be used by the Web UI Redis pods, priority class needs to be created beforehand
     priorityClassName: ""
+
+    # -- custom labels to add to all resources
+    customLabels: {}
+
+    # -- custom annotations to add to all resources
+    customAnnotations: {}
 
     # -- additions labels on the pods
     podLabels: {}
