Expose AWS_S3_ENDPOINT configuration
Signed-off-by: Michael Gysel <michael.gysel@unblu.com>

--- a/charts/falcosidekick/templates/secrets.yaml
+++ b/charts/falcosidekick/templates/secrets.yaml
@@ -110,6 +110,7 @@ data:
   AWS_S3_BUCKET: "{{ .Values.config.aws.s3.bucket | b64enc }}"
   AWS_S3_PREFIX: "{{ .Values.config.aws.s3.prefix | b64enc }}"
   AWS_S3_MINIMUMPRIORITY: "{{ .Values.config.aws.s3.minimumpriority | b64enc }}"
+  AWS_S3_ENDPOINT: "{{ .Values.config.aws.s3.endpoint | b64enc }}"
   AWS_KINESIS_STREAMNAME: "{{ .Values.config.aws.kinesis.streamname | b64enc }}"
   AWS_KINESIS_MINIMUMPRIORITY: "{{ .Values.config.aws.kinesis.minimumpriority | b64enc }}"
   AWS_SECURITYLAKE_BUCKET: "{{ .Values.config.aws.securitylake.bucket | b64enc }}"
