Make 'for' configurable for falco exporter prometheus rules
Signed-off-by: Jochem <j.bruijns@fullstaq.com>

Bump chart version and run helm docs

Signed-off-by: Jochem <j.bruijns@fullstaq.com>

Update changelog

Signed-off-by: Jochem <j.bruijns@fullstaq.com>

Update charts/falco-exporter/CHANGELOG.md

Co-authored-by: Thomas Labarussias <issif+github@gadz.org>
Signed-off-by: Jochem <33828672+TheChef23@users.noreply.github.com>

--- a/charts/falco-exporter/values.yaml
+++ b/charts/falco-exporter/values.yaml
@@ -198,20 +198,25 @@ prometheusRules:
       enabled: true
       rate_interval: "5m"
       threshold: 0
+      for: "15m"
     error:
       enabled: true
       rate_interval: "5m"
       threshold: 0
+      for: "15m"
     critical:
       enabled: true
       rate_interval: "5m"
       threshold: 0
+      for: "15m"
     alert:
       enabled: true
       rate_interval: "5m"
       threshold: 0
+      for: "5m"
     emergency:
       enabled: true
       rate_interval: "1m"
       threshold: 0
+      for: "1m"
     additionalAlerts: {}
