Resolve bug in the PrometheusRule for line in falco exporter
Signed-off-by: Jochem <j.bruijns@fullstaq.com>

--- a/charts/falco-exporter/templates/prometheusrule.yaml
+++ b/charts/falco-exporter/templates/prometheusrule.yaml
@@ -51,7 +51,7 @@ spec:
         summary: Falco is experiencing high rate of critical events
         description: A high rate of critical events are being detected by Falco
       expr: rate(falco_events{priority="2"}[{{ .Values.prometheusRules.alerts.critical.rate_interval }}]) > {{ .Values.prometheusRules.alerts.critical.threshold }}
-      {{ .Values.prometheusRules.alerts.critical.for }}
+      for: {{ .Values.prometheusRules.alerts.critical.for }}
       labels:
         severity: critical
     {{- end }}
