--- a/charts/falcosidekick/templates/service-ui.yaml
+++ b/charts/falcosidekick/templates/service-ui.yaml
@@ -46,7 +46,7 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  type: ClusterIP
+  type: {{ .Values.webui.redis.service.type }}
   ports:
     - port: {{ .Values.webui.redis.service.port }}
       targetPort: {{ .Values.webui.redis.service.targetPort }}
