fix the error when the custom CA cert is missing, even it's the default, see: https://github.com/falcosecurity/falcosidekick/issues/987
Signed-off-by: Thomas Labarussias <issif+github@gadz.org>

--- a/charts/falcosidekick/values.yaml
+++ b/charts/falcosidekick/values.yaml
@@ -145,7 +145,7 @@ config:
 
   tlsclient:
     # -- CA certificate file for server certification on TLS connections, appended to the system CA pool if not empty
-    cacertfile: "/etc/certs/client/ca.crt"
+    cacertfile: ""
 
   tlsserver:
     # -- if true TLS server will be deployed instead of HTTP
