:wrench: Add possibility to add annotations to the metrics service
Signed-off-by: afreyermuth98 <anthofreyer@gmail.com>

:wrench: Resolving conflicts

Signed-off-by: afreyermuth98 <anthofreyer@gmail.com>

:bug: Fixing CI

Signed-off-by: afreyermuth98 <anthofreyer@gmail.com>

:bug: Missing dot before Values

Signed-off-by: afreyermuth98 <anthofreyer@gmail.com>

:wrench: Conflicts

Signed-off-by: afreyermuth98 <anthofreyer@gmail.com>

:bug: Removed extra space

Signed-off-by: afreyermuth98 <anthofreyer@gmail.com>

:wrench: Reviews

Signed-off-by: afreyermuth98 <anthofreyer@gmail.com>

:bug: Extra toYaml

Signed-off-by: afreyermuth98 <anthofreyer@gmail.com>

:wrench: Working on tests

Signed-off-by: afreyermuth98 <anthofreyer@gmail.com>

:wrench: Reviews

Signed-off-by: afreyermuth98 <anthofreyer@gmail.com>

:wrench: Annotation test + duplicate chartInfo

Signed-off-by: afreyermuth98 <anthofreyer@gmail.com>

:wrench: Ref to options

Signed-off-by: afreyermuth98 <anthofreyer@gmail.com>

:bug: Helm options type

Signed-off-by: afreyermuth98 <anthofreyer@gmail.com>

:wrench: Patch

Signed-off-by: afreyermuth98 <anthofreyer@gmail.com>

:bug: Fixed bad conflicts resolution

Signed-off-by: afreyermuth98 <anthofreyer@gmail.com>

:arrow_up: Bump chart version

Signed-off-by: afreyermuth98 <anthofreyer@gmail.com>

--- a/charts/falco/values.yaml
+++ b/charts/falco/values.yaml
@@ -250,6 +250,10 @@ metrics:
     # -- type denotes the service type. Setting it to "ClusterIP" we ensure that are accessible
     # from within the cluster.
     type: ClusterIP
+    # -- labels to add to the service.
+    labels: {}
+    # -- annotations to add to the service.
+    annotations: {}
     # -- ports denotes all the ports on which the Service will listen.
     ports:
       # -- metrics denotes a listening service named "metrics".
